Fix aligncenter

--- a/static/index.css
+++ b/static/index.css
@@ -157,7 +157,7 @@ footer a:hover {
   margin: 1.5em 0;
 }
 
-.post-content .align-center {
+.post-content .aligncenter {
   display: block;
   margin: 0 auto;
 }
